# ttk-dani

./: CMakeLists.txt  ChangeLog.md
.github/actions/install-deps-unix/: action.yml
.github/actions/test-ttk-unix/: action.yml
.github/workflows/: check.yml  package.yml  test.yml
CMake/: cpack_config.cmake
core/base/: TTKBaseConfig.cmake.in
core/base/abstractTriangulation/: AbstractTriangulation.h
core/base/approximateTopology/: ApproximateTopology.h
core/base/arrayPreconditioning/: ArrayPreconditioning.h
core/base/assignmentSolver/: AssignmentAuction.h  AssignmentSolver.h
core/base/clusteringMetrics/: ClusteringMetrics.cpp
core/base/ripsPersistenceDiagram/: CMakeLists.txt  ripser.h  ripserpy.cpp
core/base/topologicalSimplification/: BackendTopologicalOptimization.h  CMakeLists.txt  TopologicalSimplification.cpp  TopologicalSimplification.h
paraview/patch/: headless.yml  package.yml  paraview-5.13.0-ApplicationComponents.patch  paraview-5.13.0-CPack.patch  patch-paraview-5.13.0.sh
paraview/xmls/: ArrayEditor.xml  ArrayPreconditioning.xml  BlockAggregator.xml  CinemaProductReader.xml  CinemaReader.xml  DataSetToTable.xml  DimensionReduction.xml  FlattenMultiBlock.xml  GeometrySmoother.xml  IcospheresFromPoints.xml  MergeTree.xml  MergeTreeAutoencoder.xml  MergeTreeAutoencoderDecoding.xml  MergeTreeClustering.xml  MergeTreeDistanceMatrix.xml  MergeTreePrincipalGeodesics.xml  MorseSmaleComplex.xml  PersistenceDiagram.xml  ScalarFieldNormalizer.xml  ScalarFieldSmoother.xml  SignedDistanceField.xml  TopologicalSimplification.xml  TrackingFromFields.xml
(+93 files in other folders)
